# my-lab-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: setup.cmake
lab/: CMakeLists.txt  main.cpp
log/: CMakeLists.txt  ansiterm.h  config.h.in  log.cpp  log.h
test/: CMakeLists.txt  unitest.cpp
